tests/miniJava/neg/000788_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = false public int [] java ( ) { return 0 ; } ; } }
